# pps

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  renovate.json
.gitlab/ci/: deploy.yaml  lint.yaml  test.yaml
alembic/: env.py
alembic/versions/: 2024_04_12_1351-0f829de42ead_init_database.py  2024_04_14_0854-f3ee8d983179_change_offer_price_column_name.py  2024_04_15_1139-b53944c8d447_set_fill_factor.py  2024_04_18_0955-77c3f095f32f_remove_availability_and_buyable_tables.py  2024_04_29_0852-ea0707fff91f_drop_offer_table.py  2024_04_29_0856-f8e7f76575b5_create_partitioned_offer_table.py  2024_04_29_1347-8a48744218a7_create_partitioned_product_price_table.py  2024_05_06_1346-3347f9987704_indexing_offers_shop_id.py  2024_05_13_1332-5d0213c2e410_add_base_price_table.py  425d1fc27306_add_product_table.py  4f28ebf04082_initial_table_creation.py  735f11dd2cd8_create_partion_tables.py  7a9f97dc1b9b_fix_column_name.py  b53944c8d447_set_fill_factor.py
app/: api_app.py  constants.py  consumer_app.py  custom_types.py  exceptions.py  job_app.py  manage.py  metrics.py  types.py  worker_app.py
app/api/: deps.py  response.py  router.py
app/api/v1/price_services/: __init__.py  router.py  schemas.py
app/config/: api.py  log.py  settings.py
app/consumers/: consumer.py  rabbitmq_client.py
app/crud/: __init__.py  availability.py  base.py  base_price.py  buyable.py  id_country_base.py  offer.py  prodcut_price.py  product.py  product_discount.py  product_price.py  product_price_history.py  shop.py  simple_entity.py
app/db/: __init__.py  alembic.py  pg.py
app/db/tables/: __init__.py  availability.py  base_price.py  buyable.py  offer.py  prodcut_price_history.py  product.py  product_discount.py  product_price.py  shop.py
app/jobs/: __init__.py  base.py  entity_population.py  maintenance.py  price_event.py  price_publish.py  price_to_rabbit.py  validation.py
app/parsers/: __init__.py  availability.py  base.py  buyable.py  offer.py  shop.py
app/republish/: headers.py  republish_client.py
app/schemas/: availability.py  base.py  base_price.py  buyable.py  message.py  offer.py  price_event.py  product.py  product_discount.py  product_price.py  product_price_history.py  shop.py
app/services/: __init__.py  availability.py  base.py  buyable.py  event_processing.py  offer.py  product.py  product_price.py  shop.py  simple_entity.py
app/utils/: __init__.py  log.py  pg_partitions.py  price_event.py  product_price_entity_client.py  rabbitmq_adapter.py  redis_adapter.py  rmq_client.py  sentry.py
app/workers/: __init__.py  availability.py  base.py  buyable.py  offer.py  shop.py
chart/product-price/: Chart.yaml  values.dev.yaml  values.pre-prod.yaml  values.prod.yaml  values.yaml
chart/product-price/templates/: _helpers.tpl  api-configmap.yaml  api-deployment.yaml  api-hpa.yaml  api-ingress.yaml  api-secrets.yaml  api-service.yaml  consumer-configmap.yaml  consumer-deployment.yaml  consumer-keda.yaml  consumer-secrets.yaml  cronjob-secret.yaml  cronjob.yaml  job-configmap.yaml  job-deployment.yaml  job-keda.yaml  job-migrate-database.yaml  job-secrets.yaml  maintenance-configmap.yaml  pod-monitor.yaml  populate-entities-configmap.yaml  populate-entities-cronjob.yaml  populate-entities-secret.yaml  redis-exporter-deployment.yaml  validation-configmap.yaml  worker-configmap.yaml  worker-deployment.yaml  worker-keda.yaml  worker-secrets.yaml
docker/postgres/: init-ci-testing-database.sh  init-databases.sh
docs/: schema.sql
gitlab-ci/: build.yaml  lint.yaml  test.yaml
scripts/: conventions.sh  format.sh  lint-helm.sh  run-api-reload.sh  run-api.sh  tests.sh  types.sh
tests/: conftest.py  factories.py  utils.py
tests/api/: test_price_services_api.py
tests/consumer/: conftest.py  test_consumer.py
tests/crud/: test_availability_crud.py  test_base_crud.py  test_buyable_crud.py  test_id_country_base_crud.py  test_offer_crud.py  test_product_crud.py  test_product_discount_crud.py  test_product_price_crud.py  test_product_price_history_crud.py  test_shop_crud.py
tests/integration/api/: test_api_healthchecks.py  test_price_services_api.py
tests/integration/consumer/: conftest.py  test_consumer.py
tests/integration/jobs/: test_entity_population_job.py  test_maintenance_job.py  test_price_event_job.py  test_price_rabbit_job.py  test_validation_job.py
tests/integration/workers/: test_availability_worker.py  test_buyable_worker.py  test_offer_worker.py  test_shop_worker.py  test_workers.py
tests/msg_templator/: availability.py  base.py  buyable.py  offer.py  shop.py
tests/parsers/: test_all_parsers.py  test_base_parser.py
tests/parsers/data/: availability.json  buyable.json  offer.json  shop.json
tests/services/: test_availability_service.py  test_base_service.py  test_buyable_service.py  test_offer_service.py  test_shop_service.py
tests/unit/client/: test_rabbit_entity_client.py
tests/unit/crud/: test_availability_crud.py  test_base_crud.py  test_base_price_crud.py  test_buyable_crud.py  test_offer_crud.py  test_product_price_crud.py  test_shop_crud.py
tests/unit/jobs/: test_entity_population_job.py  test_event_processing_job.py  test_maintenance_job.py  test_price_rabbit_job.py  test_validation_job.py
tests/unit/parsers/: test_all_parsers.py  test_base_parser.py
tests/unit/republish/: test_republisher.py
tests/unit/services/: test_all_services.py  test_availability_service.py  test_base_service.py  test_buyable_service.py  test_event_processing_service.py  test_offer_service.py  test_shop_service.py
tests/unit/workers/: test_availability_worker.py  test_base_worker.py  test_buyable_worker.py  test_offer_worker.py  test_shop_worker.py
tests/workers/: test_availability_worker.py  test_buyable_worker.py  test_offer_worker.py  test_shop_worker.py
