# ---------- POETRY ----------
[tool.poetry]
name = "Price services API"
version = "0.1.0"
description = "Heureka Group API for price services"
authors = ["Samuel Kopecky <samuel.kopecky@heureka.cz>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
typer = "^0.12.3"
asyncpg = "^0.29.0"
SQLAlchemy = { extras = ["mypy"], version = "^2.0.19" }
SQLAlchemy-Utils = "^0.41.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
alembic = "^1.11.1"
orjson = "^3.9.1"
psycopg2-binary = "^2.9.6"
httpx = { extras = ["http2"], version = "^0.27.0" }
uvloop = "^0.19.0"
sentry-sdk = { extras = ["fastapi"], version = "1.45.0" }
prometheus-client = "^0.20.0"
python-json-logger = "^2.0.7"
aio_pika = "9.4.1"
redis = {extras = ["hiredis"], version = "5.0.4"}
heureka-group-api-principles = { version = "==3.9.3", source = "internal-pypi" }

[tool.poetry.dev-dependencies]
black = "^24.4.0"
mypy = "^1.4.1"
ruff = "0.4.4"
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.8.2"
pytest-asyncio = "^0.23.6"
freezegun = "^1.2.2"
types-sqlalchemy-utils = "^1.0.1"
asyncpg-stubs = "^0.29.1"
types-redis="^4.6.0.20240409"
types-pika = "^1.2.0b1"
types-requests = "^2.23.0.1"

[[tool.poetry.source]]
name = "internal-pypi"
url = "https://pypi.heu.cz/root/production/+simple/"
priority = "explicit"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

# ---------- RUFF ----------

[tool.ruff]
select = ["E", "W", "F", "B", "N", "PL", "I", "ASYNC", "C4", "G", "PIE", "T20", "PYI", "Q", "SIM", "ARG", "PERF"]
fixable = ["ALL"]
line-length = 100
fix = true


[tool.ruff.pylint]
max-args = 7

[tool.ruff.per-file-ignores]
"tests/*" = [
    "F841", # unused-variable
    "ARG001", # unused-function-argument
    "PLR2004"  # magic-value-comparison
]
"tests/factories.py" = [
    "PLR0913",  # too-many-arguments
]
"app/crud/*" = [
    "E501"  # line-too-long
]
"alembic/*" = ["E402", "E501"]  # module-import-not-at-top-of-file, line-too-long


[tool.ruff.pycodestyle]
ignore-overlong-task-comments = true

# ---------- BLACK ----------
[tool.black]
target-version = ['py311']
line-length = 90

# ---------- MYPY ----------
[tool.mypy]
python_version = "3.11"
warn_redundant_casts = true
warn_unused_ignores = true
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
